FSPA-271 create base notification card

--- a/src/app/bd-toast-manager/bd-toast-manager.component.html
+++ b/src/app/bd-toast-manager/bd-toast-manager.component.html
@@ -6,29 +6,12 @@
   <div
     *ngFor="let notification of _visibleNotifications"
     class="toast"
-    [class.remove]="isNotificationRemoved(notification)"
-    [ngSwitch]="notification.type">
+    [class.remove]="isNotificationRemoved(notification)">
     {{onStartNotificationTimeOut(notification)}}
-
-      <message-card
-        *ngSwitchCase="_notificationType.Message"
+      <bd-notification-card
         (close)="removeNotification(notification, true)"
         [isClosable]="true"
         [notification]="notification">
-      </message-card>
-
-      <task-card
-        *ngSwitchCase="_notificationType.Task"
-        (close)="removeNotification(notification, true)"
-        [isClosable]="true"
-        [notification]="notification">
-      </task-card>
-
-      <notification-card
-        *ngSwitchCase="_notificationType.Notification"
-        (close)="removeNotification(notification, true)"
-        [isClosable]="true"
-        [notification]="notification">
-      </notification-card>
+      </bd-notification-card>
   </div>
 </div>
