FSPA-245 #comment fixed closable notification card icon

--- a/src/app/shared/components/notification-cards/notification-card/notification-card.component.html
+++ b/src/app/shared/components/notification-cards/notification-card/notification-card.component.html
@@ -9,7 +9,9 @@
     </button>
   </div>
   <div class="notification-container">
+    <div class="notification-card-icon-container">
     <notification-card-icon [eventType]="notification.notificationStatus"></notification-card-icon>
+  </div>
     <div class="content-container">
       <div class="notification-title">{{notification.title}}</div>
       <div class="notification-message">
