FSPA-271 remove odd code

--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
@@ -13,7 +13,7 @@
       [lastName]="notification.sender.lastName">
     </bd-initials-circle>
     <div class="right">
-      <div class="title">{{notification.sender.firstName}} sdsdfsdf {{notification.sender.lastName}}</div>
+      <div class="title">{{notification.sender.firstName}} {{notification.sender.lastName}}</div>
       <div class="message">
         {{notification.message}}
       </div>
