--- a/src/app/shared/components/bd-notification-card/bd-notification-card.component.html
+++ b/src/app/shared/components/bd-notification-card/bd-notification-card.component.html
@@ -2,18 +2,21 @@
     <message-card
       *ngSwitchCase="notificationTypeEnum.Message"
       [isClosable]="isClosable"
-      [notification]="notification">
+      [notification]="notification"
+      (close)="onCloseClick($event)">
     </message-card>
 
     <task-card
       *ngSwitchCase="notificationTypeEnum.Task"
       [isClosable]="isClosable"
-      [notification]="notification">
+      [notification]="notification"
+      (close)="onCloseClick($event)">
     </task-card>
 
     <notification-card
       *ngSwitchCase="notificationTypeEnum.Notification"
       [isClosable]="isClosable"
-      [notification]="notification">
+      [notification]="notification"
+      (close)="onCloseClick($event)">
     </notification-card>
 </div>
