--- a/src/app/shared/components/notification-cards/task-card/task-card.component.scss
+++ b/src/app/shared/components/notification-cards/task-card/task-card.component.scss
@@ -4,7 +4,7 @@
 
 
 .task-notification-container {
-  background: $light-blue;
+  background: $white;
 
   .title-container {
     display: none;
@@ -40,8 +40,8 @@
     }
   }
 
-  &.had-seen-notification {
-    background: $white;
+  &.new-notification {
+    background: $light-blue;
   }
 
   &.closable {
