--- a/src/app/shared/components/notification-cards/message-card/message-card.component.html
+++ b/src/app/shared/components/notification-cards/message-card/message-card.component.html
@@ -1,5 +1,5 @@
 <div class="message-card-container"
-     [class.had-seen-notification]="hadSeenNotification"
+     [class.new-notification]="!viewed"
      [class.closable]="isClosable">
   <div class="title-container">
     <span class="title-text">New Message</span>
