--- a/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.html
+++ b/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.html
@@ -1,5 +1,5 @@
 <span
   [class.active]="isActive">
   <i class="{{class}}"></i>
-  <span [class.digit-number]="count">{{count}}</span>
+  <span *ngIf="count" [class.digit-number]="count">{{count}}</span>
 </span>
