refactoring: move viewed property to notification model, change class name for non viewed notifications, add checking for new added notifications

--- a/src/app/shared/components/bd-notification-card/components/base-notification/base-notification.component.scss
+++ b/src/app/shared/components/bd-notification-card/components/base-notification/base-notification.component.scss
@@ -6,6 +6,7 @@
   background: $white;
   font-size: $tiny-font-size;
 
+  &.active,
   &:hover {
     background: $light-blue;
 
@@ -16,10 +17,6 @@
         background: $light-blue;
       }
     }
-  }
-
-  &.new-notification {
-    background: $light-blue;
   }
 
   .title {
@@ -82,6 +79,12 @@
 
     .title {
       color: $horizon;
+    }
+
+    button {
+      &:focus {
+        outline: 0;
+      }
     }
 
     .message {
