--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,30 +1,7 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
-      <div class="btn-group">
-        <button type="button" (click)="onTabClick(1)" class="btn btn-primary">List</button>
-        <button type="button" (click)="onTabClick(2)" class="btn btn-primary">Datatable</button>
-      </div>
-      <div [ngSwitch]="selectedTab">
-        <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)' *ngSwitchCase="1"></load-stop-cards>
-        <div *ngSwitchCase="2">
-          <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
-          </bd-button>
-          <ngx-datatable
-            class='material striped'
-            [selected]="selected"
-            [rows]='items'
-            [columns]="columns"
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="50"
-            [rowHeight]="'auto'"
-            [selectionType]="'single'"
-            (select)='onSelect($event)'
-            [limit]="10">
-          </ngx-datatable>
-        </div>
-      </div>
+        <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
     </div>
   </first-pane>
 
