--- a/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.scss
+++ b/src/app/shared/components/bd-icons/icon-with-count-indicator/icon-with-count-indicator.component.scss
@@ -26,7 +26,7 @@ span {
 
   .digit-number {
     position: absolute;
-    top: 5px;
+    top: 7px;
     width: auto;
     height: 20px;
     border: 3px solid $white;
@@ -34,6 +34,7 @@ span {
     color: $white;
     font-size: 10px;
     text-align: center;
+    min-width: 20px;
     left: 28px;
     border-radius: 50px;
     padding-left: 4px;
