--- a/src/app/shared/components/form-navigation/form-navigation.component.html
+++ b/src/app/shared/components/form-navigation/form-navigation.component.html
@@ -1,13 +1,7 @@
 <div class="form-navigation">
   <p class="title">{{title}}</p>
-  <perfect-scrollbar class="container">
-    <div class="content">
-      <span 
-        *ngFor="let anchor of anchors; let i = index"
-        [class.active]="_activeAnchor === i"
-        (click)="_scrollTo(anchor.id, i)">
-        {{anchor.title}}
-      </span>
-    </div>
-  </perfect-scrollbar>
+  <bd-perfect-scrollbar
+    [items]="anchors"
+    (itemClick)="_scrollTo($event)">
+  </bd-perfect-scrollbar>
 </div>
