edit perfect scrollbar component

--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.html
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.html
@@ -1,10 +1,3 @@
 <perfect-scrollbar class="container">
-  <div class="content">
-    <span
-      *ngFor="let item of items; let i = index"
-      [class.active]="_activeItem === i"
-      (click)="onItemClick(item.id, i)">
-      {{item.title}}
-    </span>
-  </div>
+  <ng-content></ng-content>
 </perfect-scrollbar>
