FSPA-138 #comment remove datatable from project, fixed user icon, changed task icon, icon search

--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -47,6 +47,18 @@
   }
 }
 
+.icon-tasks {
+  &:before {
+    content: '\e911';
+  }
+}
+
+.icon-search {
+  &:before {
+    content: '\e915';
+  }
+}
+
 .icon-calendar {
   &:before {
     content: '\e904';
@@ -128,12 +140,6 @@
 .icon-messages {
   &:before {
     content: '\e910';
-  }
-}
-
-.icon-tasks {
-  &:before {
-    content: '\e911';
   }
 }
 
