--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -1,5 +1,5 @@
 <span class="search-icon">
-  <i class="fa fa-search" aria-hidden="true"></i>
+  <i class="icon-search"></i>
 </span>
 <input type="text" placeholder="Search for anything by number, name, date or amount. You can also type action you would like to perform...">
 <div class="right">
@@ -23,8 +23,6 @@
 </bd-notification-popover>
 
   <span>
-    <div>
       <i class="icon-user"></i>
-    </div>
   </span>
 </div>
