--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -30,6 +30,7 @@ input {
     overflow: hidden;
     width: 57px;
     height: $form-control-height;
+    font-size: 19px;
     cursor: pointer;
     justify-content: center;
     align-items: center;
