link loads with filter-container

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,6 +1,7 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
+        <filter-container></filter-container>
         <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
     </div>
   </first-pane>
