--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,6 +1,8 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
+      <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
+      </bd-button>
         <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
     </div>
   </first-pane>
