--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,6 +9,8 @@ $dirty-grey: #b7bcc1;
 $iron: #cccecf;
 $gray-chateau: #9fa3a6;
 $blue: #75b3e2;
+$closable-card-bg: rgba($shark, .9);
+$closable-card-ellipsis: #393d42;
 $horizon: #597c97;
 $mako: #485158;
 $light-blue: #f5fefe;
