--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.scss
@@ -8,18 +8,14 @@
   }
 
   .message {
-    @include multi-line-ellipsis($line-height: 18px, $line-count: 1);
+    @include multi-line-ellipsis($line-height: 18px, $line-count: 1, $bg-color: $white);
   }
 
   &.closable {
     .message {
-      @include multi-line-ellipsis($line-height: 18px, $line-count: 2);
-      background: $shark;
+      @include multi-line-ellipsis($line-height: 18px, $line-count: 2, $bg-color: $closable-card-ellipsis);
+      background: inherit;
       color: $white;
-
-      &:after { 
-        background: $shark; 
-      } 
     }
   }
 }
