add bd-perfect scrollbar to loads component

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,7 +1,34 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
-        <filter-container></filter-container>
+      <div class="container">
+        <bd-perfect-scrollbar class="container">
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+          <span>test</span>
+        </bd-perfect-scrollbar>
+      </div>
+        <br>
         <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
     </div>
   </first-pane>
