--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
@@ -1,6 +1,12 @@
 @import '../../../../assets/styles/variables';
 
 bd-perfect-scrollbar {
+  .container {
+    position: relative;
+    width: 100%;
+    height: 43px;
+    padding: 0;
+  }
 
   //sass-lint:disable no-important
   .ps-active-x {
