FSPA-138 #comment code refactoring

--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -30,7 +30,7 @@ input {
     overflow: hidden;
     width: 57px;
     height: $form-control-height;
-    font-size: $top-panel-icon;
+    font-size: $top-panel-icon-size;
     cursor: pointer;
     justify-content: center;
     align-items: center;
