--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -58,7 +58,7 @@ $mini-font-size: .625rem;
 $tiny-font-size: .75rem;
 $small-font-size: .875rem;
 $large-font-size: 1.25rem;
-$top-panel-icon: 19px;
+$top-panel-icon-size: 19px;
 
 @font-face {
   font-family: 'SFUIText-Regular';
