--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../assets/styles/variables';
 
-$container-height: 43px;
+$container-height: $horizontal-scroll-container-height;
 
 form-navigation {
   position: absolute;
