--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -66,6 +66,7 @@ $top-panel-icon: 19px;
 }
 /* default input height */
 $form-control-height: 50px;
+$horizontal-scroll-container-height: 43px;
 
 /* form navigation */
 $form-navigation-height: 91px;
