--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.html
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.html
@@ -1,3 +1,3 @@
-<perfect-scrollbar class="container">
+<perfect-scrollbar class="scroll-container">
   <ng-content></ng-content>
 </perfect-scrollbar>
