--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,9 +1,13 @@
 <multi-pane-layout>
   <first-pane>
     <div class="data-panel">
-      <filter-container>
-        <autocomplete-filter defaultLabel="Customers" valueField="value" [selectedItems]="[{value: 'test1'} , {value: 'test2'}]"></autocomplete-filter>
-      </filter-container>
+      <div class="bd-filter-container" style="background: white;">
+          <filter-container>
+              <autocomplete-filter defaultLabel="Company" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
+              <autocomplete-filter defaultLabel="Status" valueField="value" [selectedItems]="testFilters"></autocomplete-filter>
+              <autocomplete-filter defaultLabel="Drivers" valueField="value" [selectedItems]="[]"></autocomplete-filter>
+          </filter-container>
+      </div>
       <bd-button class="add-button" [color]="'primary'" [text]="'Add'" (click)="onAdd()">
       </bd-button>
       <load-stop-cards [selected]="selected" [loads]="items" (select)='onSelect($event)'></load-stop-cards>
